lab1/Test/L1-A-12-19.output
Error Type B at Line 2
Error Type A at Line 5
Error Type B at Line 5
Error Type B at Line 6
Error Type A at Line 11
Error Type B at Line 23
Error Type A at Line 31
Error Type B at Line 36
Error Type A at Line 43
Error Type A at Line 43
